--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--<meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="${AIzaSyBShreWrfH1g9yIAmcn8DxgHkCUOv0ttCI}" />-->
 
     <application
         android:allowBackup="true"
@@ -14,6 +20,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShareTheRide"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBShreWrfH1g9yIAmcn8DxgHkCUOv0ttCI"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
