Share the Ride project

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!--<meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="${AIzaSyBShreWrfH1g9yIAmcn8DxgHkCUOv0ttCI}" />-->
 
     <application
         android:allowBackup="true"
@@ -23,7 +20,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBShreWrfH1g9yIAmcn8DxgHkCUOv0ttCI"/>
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".MainActivity"
